--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -35,14 +35,14 @@ a.active {
 }
 
 a {
-    color: #3d5c5c;
+    color: #669999;
 }
 
 a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #647d7d;
+    color: #75a3a3;
 }
 
 h1,
@@ -216,13 +216,13 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #3d5c5c;
+    color: #669999;
 }
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
     color: #fff;
-    background-color: #3d5c5c;
+    background-color: #669999;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
